[metadata]
name = bttackler
version='1.0'
author='Zhongyi Pei, Zhiyao Cen'
author_email='peizhyi@gmail.com, cenzy23@mails.tsinghua.edu.cn'
description='Diagnosis-based HPO Framework'

long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = diagnosis, HPO
license = MIT

[options]
include_package_data = True
packages = find:
python_requires >=3.8
install_requires =
    nni[all]==2.10.1

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    cases*
